# Diplom

./: pyproject.toml
AstIndex/: .gitignore  CHANGELOG.md  CLAUDE.md  POTENTIAL_IMPROVEMENTS.md  README.md  pyproject.toml
AstIndex/ast_index/: __init__.py  cli.py  config.py  constants.py  context_filters.py  database.py  generic_parser.py  indexer.py  models.py  namespace_resolution.py  parallel_indexer.py  project_detection.py  reference_keywords.py  references.py  search.py
AstIndex/ast_index/parsers/: __init__.py  base.py  csharp.py  javascript.py  python.py  typescript.py
AstIndex/ast_index/utils/: file_utils.py  logging.py
AstIndex/docs/: definition-command.md
AstIndex/test_refs/: test.py  test_external.py
AstIndex/tests/: test_context_filters.py  test_database_usings.py  test_integration.py  test_parallel_indexing.py  test_references.py
ast_index/: __init__.py  cli.py  config.py  search.py
tests/: test_parallel_indexing.py
